# glam

./: .editorconfig  .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  theme.toml
.github/: dependabot.yml
.github/workflows/: pr-comment.yml  pr-creation-dependencies.yml  pr-creation-layouts.yml  pr-creation.yml  pull-request-creation.yml
assets/css/: main.css
assets/js/: nav.js  role_slider.js  tableOfContents.js
cms/: index.js  roles.js
cms/collections/: authors.js  guides.js  jobs.js  roleLandingPages.js  roleMetaSlider.js
cms/fields/: fields.js
data/encounter/: savage.json  ultimate.json
data/frontpage/: slider.json
data/roles/: casters.json  healers.json  melee.json  ranged.json  tanks.json
docs/partials/: cards.md
exampleSite/: config.toml
exampleSite/content/: _index.md  about.md  admin.md
layouts/: 404.html  index.html  index.searchindex.json
layouts/_default/: baseof.html
layouts/editor/: baseof.html
layouts/encounters/: list.html  single.html
layouts/jobs/: basics.html  bis.html  changes.html  job_home.html  list.html  qna.html  role_home.html  single.html
layouts/pages/: single.html
layouts/partials/: footer.html  general_header.html  head.html  header.html  header_home.html  image-modal.html  nav_item.html  redirect.html
scripts/: .gitignore  README.md  generate_config.py  requirements.txt
tools/econfgen/: .gitignore  README.md  econfgen.yml.example  pyproject.toml
tools/econfgen/src/econfgen/: __init__.py  __main__.py  collections.py  fields.py  models.py
(+171 files in other folders)
